welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:37: error: '(' expected but identifier found.
  for i(<-1 to 3){
      ^